--- a/src/Curacao.Mvvm/packages.config
+++ b/src/Curacao.Mvvm/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Curacao.Mvvm.Abstractions" version="1.0.0" targetFramework="portable-net45+sl40+win+wp" />
   <package id="JetBrains.Annotations.Portable" version="8.0.5185.29681" targetFramework="portable-win+net45+sl40+wp" />
 </packages>
