--- a/src/Curacao.Mvvm.Tests/Curacao.Mvvm.Tests.csproj
+++ b/src/Curacao.Mvvm.Tests/Curacao.Mvvm.Tests.csproj
@@ -53,7 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Navigation\NavigationData.cs" />
     <Compile Include="Navigation\NavigationServiceTest.cs" />
+    <Compile Include="Navigation\TestPlatformNavigationServiceImplementation.cs" />
+    <Compile Include="Navigation\TestViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
