--- a/src/Curacao.Mvvm/Curacao.Mvvm.csproj
+++ b/src/Curacao.Mvvm/Curacao.Mvvm.csproj
@@ -57,13 +57,18 @@
     <Compile Include="Navigation\INavigationUriProvider.cs" />
     <Compile Include="Navigation\IPlatformNavigationService.cs" />
     <Compile Include="Navigation\ISerializer.cs" />
-    <Compile Include="Navigation\IViewMappingProvider.cs" />
+    <Compile Include="Navigation\Mapping\IViewMappingProvider.cs" />
+    <Compile Include="Navigation\Mapping\IViewModelNameExtractor.cs" />
+    <Compile Include="Navigation\Mapping\IViewNameBuilder.cs" />
+    <Compile Include="Navigation\Mapping\ViewNameBuilder.cs" />
     <Compile Include="Navigation\NavigationContext.cs" />
     <Compile Include="Navigation\NavigationEvent.cs" />
     <Compile Include="Navigation\NavigationException.cs" />
     <Compile Include="Navigation\NavigationQueryExtension.cs" />
     <Compile Include="Navigation\NavigationSerializer.cs" />
     <Compile Include="Navigation\NavigationService.cs" />
+    <Compile Include="Navigation\Mapping\ViewModelNameExtractor.cs" />
+    <Compile Include="Navigation\Mapping\ViewMappingProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\UnsafeBaseViewModel.cs" />
