ViewModelNameExtractor accepts Type instead of string, unit test updated, Tests assembly declared as a firend one

--- a/src/Curacao.Mvvm.Tests/Curacao.Mvvm.Tests.csproj
+++ b/src/Curacao.Mvvm.Tests/Curacao.Mvvm.Tests.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Navigation\Mapping\ViewModelNameExtractorTest.cs" />
     <Compile Include="Navigation\NavigationData.cs" />
     <Compile Include="Navigation\NavigationServiceTest.cs" />
     <Compile Include="Navigation\TestPlatformNavigationServiceImplementation.cs" />
