navigation updated, no more mapping needed, al is Attribute based

--- a/src/Curacao.Mvvm.Tests/Curacao.Mvvm.Tests.csproj
+++ b/src/Curacao.Mvvm.Tests/Curacao.Mvvm.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Navigation\Mapping\ViewModelNameExtractorTest.cs" />
     <Compile Include="Navigation\NavigationData.cs" />
     <Compile Include="Navigation\NavigationServiceTest.cs" />
+    <Compile Include="Navigation\SerializationTest.cs" />
     <Compile Include="Navigation\TestPlatformNavigationServiceImplementation.cs" />
     <Compile Include="Navigation\TestViewModel.cs" />
     <Compile Include="Navigation\ViewMappingProviderTest.cs" />
