--- a/src/Curacao.Sample.App/packages.config
+++ b/src/Curacao.Sample.App/packages.config
@@ -4,4 +4,5 @@
   <package id="Curacao.Phone.Toolkit" version="1.0.1" targetFramework="wp80" />
   <package id="JetBrains.Annotations.Portable" version="8.0.5185.29681" targetFramework="wp80" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="wp80" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="wp80" />
 </packages>
