--- a/src/Curacao.Mvvm/packages.config
+++ b/src/Curacao.Mvvm/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Curacao.Mvvm.Abstractions" version="1.0.1" targetFramework="portable-net45+sl50+win+wp80" />
-  <package id="JetBrains.Annotations.Portable" version="8.0.5185.29681" targetFramework="portable-win+net45+sl40+wp" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="portable-net45+sl50+win+wp80" />
+  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="wp8" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="wp8" />
 </packages>
