--- a/src/Curacao.Sample.App/packages.config
+++ b/src/Curacao.Sample.App/packages.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Curacao.Mvvm.Abstractions" version="1.0.1" targetFramework="wp80" />
-  <package id="Curacao.Phone.Toolkit" version="1.0.1" targetFramework="wp80" />
-  <package id="JetBrains.Annotations.Portable" version="8.0.5185.29681" targetFramework="wp80" />
-  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="wp80" />
+  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="wp8" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="wp8" />
   <package id="Ninject" version="3.2.2.0" targetFramework="wp80" />
 </packages>
