--- a/src/Curacao.Phone.Toolkit/project.json
+++ b/src/Curacao.Phone.Toolkit/project.json
@@ -1,9 +1,10 @@
 ﻿{
   "dependencies": {
-    "JetBrains.Annotations": "10.0.0"
+    "JetBrains.Annotations": "10.0.0",
+    "Newtonsoft.Json": "8.0.2"
   },
   "frameworks": {
-    ".NETPortable,Version=v4.0,Profile=Profile158": {}
+     "WindowsPhone,Version=v8.0": {}
   },
   "runtimes": {
     "win": {}
